// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SettingRow should render input type setting row 1`] = `
<tr
  class="css-37yie"
  data-testid="setting-row"
>
  <td
    class="css-1vs2r4p"
  >
    Test
  </td>
  <td
    class="css-1vs2r4p"
  >
    <div
      class="css-1mzzuk6"
    >
      <div
        class="css-1t9m0j6-input denali-input animated css-uvjnz5"
        data-testid="input-wrapper"
      >
        <input
          autocomplete="off"
          data-testid="input-node"
          id="setting-test"
          pattern="[0-9]*"
          value="15"
        />
        <div
          class="message"
          data-testid="message"
        />
      </div>
    </div>
  </td>
  <td
    class="css-1vs2r4p"
  >
    desc for testing
  </td>
</tr>
`;

exports[`SettingRow should render switch type setting row 1`] = `
<tr
  class="css-37yie"
  data-testid="setting-row"
>
  <td
    class="css-1vs2r4p"
  >
    Test
  </td>
  <td
    class="css-1vs2r4p"
  >
    <div
      class="css-v3lvlk-switch denali-switch"
      data-testid="switch-wrapper"
    >
      <input
        checked=""
        id="switch-settingtest"
        name="settingtest"
        type="checkbox"
        value="true"
      />
      <label
        for="switch-settingtest"
      />
    </div>
  </td>
  <td
    class="css-1vs2r4p"
  >
    desc for testing
  </td>
</tr>
`;
